--- a/index.html
+++ b/index.html
@@ -1,208 +1,266 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Retouching Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+        }
+
+        header h1 {
+            margin: 0;
+        }
+
+        .container {
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        .gallery {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 20px;
+        }
+
+        .portfolio-item {
+            position: relative;
+            overflow: hidden;
+            border-radius: 10px;
+        }
+
+        .slider-container {
+            position: relative;
+            width: 100%;
+            height: 400px; /* Adjust the height as needed */
+            overflow: hidden;
+        }
+
+        .slider-container img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        /* The Slider Line */
+        .slider-line {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 50%;
+            width: 1px; /* Thin line */
+            background-color: #fff;
+            z-index: 10;
+        }
+
+        /* The Slider - Circle with arrows */
+        .slider {
+            position: absolute;
+            top: 50%; /* Vertically center the slider */
+            left: 50%; /* Initially position the slider at the center horizontally */
+            z-index: 20;
+            width: 40px; /* Circle width */
+            height: 40px; /* Circle height */
+            background: white;
+            cursor: ew-resize;
+            border-radius: 50%; /* Circle shape */
+            border: 2px solid #333; /* Circle border */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transform: translateY(-50%); /* Vertically center the circle */
+        }
+
+        .slider .arrow {
+            font-size: 18px;
+            color: black;
+            background-color: transparent;
+        }
+
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Retouching Portfolio</h1>
+</header>
+
 <!-- before and after html with tailwind css classes -->
 <div class="overflow-hidden before-after-wrapper rounded-3xl">
   <!-- before image: width starts at 50% but will change depending on where the slider is -->
   <div class="before-image-wrapper" style="width: 50%;">
-    <div class="before-image" style="background-image: url('https://images.prismic.io/zachpatrick/ZrFKAUaF0TcGIsrh_light-mode.webp?auto=format,compress');"></div>
+    <div class="before-image" style="background-image: "images/retouching1_before.jpg" alt="Before Image 1" class="before");"></div>
   </div>
   
   <!-- after image: takes up entire width -->
-  <div class="after-image" style="background-image: url('https://images.prismic.io/zachpatrick/ZrFKAEaF0TcGIsrg_dark-mode.webp?auto=format,compress');"></div>
+  <div class="after-image" style="background-image: "images/retouching1_after.jpg" alt="After Image 1" class="after"></div>
 
   <!-- draggable slider with handle -->
   <span class="handle draggable"></span>
 </div>
 
-// get the div containing both the before and after images
-const imageWrapper = document.querySelector(`.before-after-wrapper`);
-// check if the user is using a touch device
-const isTouch = window.matchMedia('(pointer: coarse)').matches;
+<!-- START OF PREVIOUS SLIDER CONTAINER
+<div class="container">
+    <div class="gallery">
+        <!-- Portfolio Item 1 -->
+        <div class="portfolio-item">
+            <div class="slider-container">
+                <img src="images/retouching1_before.jpg" alt="Before Image 1" class="before">
+                <img src="images/retouching1_after.jpg" alt="After Image 1" class="after">
+                <div class="slider-line"></div> <!-- Thin dividing line -->
+                <div class="slider">
+                    <span class="arrow">&lt;</span> <!-- Left arrow -->
+                    <span class="arrow">&gt;</span> <!-- Right arrow -->
+                </div>
+            </div>
+        </div>
 
-// initialize the dragElement function below
-dragElement(imageWrapper.querySelector('.handle'));
+        <!-- Portfolio Item 2 -->
+        <div class="portfolio-item">
+            <div class="slider-container">
+                <img src="images/retouching2_before.jpg" alt="Before Image 2" class="before">
+                <img src="images/retouching2_after.jpg" alt="After Image 2" class="after">
+                <div class="slider-line"></div> <!-- Thin dividing line -->
+                <div class="slider">
+                    <span class="arrow">&lt;</span> <!-- Left arrow -->
+                    <span class="arrow">&gt;</span> <!-- Right arrow -->
+                </div>
+            </div>
+        </div>
 
-// get the current coordinates of the .handle
-function getCoords(e) {
-  let x, y;
+        <!-- Portfolio Item 3 -->
+        <div class="portfolio-item">
+            <div class="slider-container">
+                <img src="images/retouching3_before.jpg" alt="Before Image 3" class="before">
+                <img src="images/retouching3_after.jpg" alt="After Image 3" class="after">
+                <div class="slider-line"></div> <!-- Thin dividing line -->
+                <div class="slider">
+                    <span class="arrow">&lt;</span> <!-- Left arrow -->
+                    <span class="arrow">&gt;</span> <!-- Right arrow -->
+                </div>
+            </div>
+        </div>
 
-  // get the current x and y of the users input (dragging .handle)
-  // check if the device is a touch device
-  if (isTouch) {
-    // touchscreen: if the devices is a touch device, the x and y will be in the touches[0] object
-    x = e.touches[0].clientX;
-    y = e.touches[0].clientY;
-  } else {
-    // 
-    // desktop: if the device is not a touch device we can get it right from the event (e) object
-    x = e.clientX;
-    y = e.clientY;
-  }
+        <!-- Portfolio Item 4 -->
+        <div class="portfolio-item">
+            <div class="slider-container">
+                <img src="images/retouching4_before.jpg" alt="Before Image 4" class="before">
+                <img src="images/retouching4_after.jpg" alt="After Image 4" class="after">
+                <div class="slider-line"></div> <!-- Thin dividing line -->
+                <div class="slider">
+                    <span class="arrow">&lt;</span> <!-- Left arrow -->
+                    <span class="arrow">&gt;</span> <!-- Right arrow -->
+                </div>
+            </div>
+        </div>
 
-  return { x, y };
-}
+        <!-- Portfolio Item 5 -->
+        <div class="portfolio-item">
+            <div class="slider-container">
+                <img src="images/retouching5_before.jpg" alt="Before Image 5" class="before">
+                <img src="images/retouching5_after.jpg" alt="After Image 5" class="after">
+                <div class="slider-line"></div> <!-- Thin dividing line -->
+                <div class="slider">
+                    <span class="arrow">&lt;</span> <!-- Left arrow -->
+                    <span class="arrow">&gt;</span> <!-- Right arrow -->
+                </div>
+            </div>
+        </div>
 
-// listens for the user touch/mouse input on the .handle element and drags the slider
-function dragElement(el) {
-  let pos1 = 0,
-      pos2 = 0,
-      pos3 = 0,
-      pos4 = 0;
+        <!-- Portfolio Item 6 -->
+        <div class="portfolio-item">
+            <div class="slider-container">
+                <img src="images/retouching6_before.jpg" alt="Before Image 6" class="before">
+                <img src="images/retouching6_after.jpg" alt="After Image 6" class="after">
+                <div class="slider-line"></div> <!-- Thin dividing line -->
+                <div class="slider">
+                    <span class="arrow">&lt;</span> <!-- Left arrow -->
+                    <span class="arrow">&gt;</span> <!-- Right arrow -->
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+END OF PREVIOUS SLIDER 
+-->
+  
+<footer>
+    <p>Contact me at <a href="mailto:phoenixfusion2025@gmail.com" style="color: white;">phoenixfusion2025@gmail.com</a></p>
+</footer>
 
-  // initialize the slider being dragged when the .handle is pressed
-  if (isTouch) {
-    el.ontouchstart = dragInit;
-  } else {
-    el.onmousedown = dragInit;
-  }
+<script>
+    const sliders = document.querySelectorAll('.slider');
+    const containers = document.querySelectorAll('.slider-container');
+    const lines = document.querySelectorAll('.slider-line');
 
-  // call elementDrag/closeElementDrag when the users interacts with .handle
-  function dragInit(e) {
-    e = e || window.event;
-    e.preventDefault();
+    sliders.forEach((slider, index) => {
+        const container = containers[index];
+        const beforeImage = container.querySelector('.before');
+        const afterImage = container.querySelector('.after');
+        const line = lines[index];
+        let isDragging = false;
 
-    // get the mouse cursor/touch position at startup
-    const { x, y } = getCoords(e);
-    pos3 = x;
-    pos4 = y;
+        // Function to update the position of the slider and adjust the "after" image and line
+        const updateSlider = (e) => {
+            const rect = container.getBoundingClientRect();
+            const offsetX = e.clientX - rect.left;
+            const width = Math.min(Math.max(offsetX, 0), rect.width); // Constrain within container width
+            slider.style.left = `${width}px`;
 
-    if (isTouch) {
-      document.ontouchend = closeElementDrag; // stop moving
-      document.ontouchmove = elementDrag; // call function whenever the cursor moves
-    } else {
-      document.onmouseup = closeElementDrag; // stop moving
-      document.onmousemove = elementDrag; // call function whenever the cursor moves
-    }
-  }
+            // Adjust the clip-path of the "after" image
+            afterImage.style.clipPath = `inset(0 0 0 ${width}px)`; // Clip "after" image to reveal it
 
-  // as the element is dragged update the .before-image-wrapper width
-  function elementDrag(e) {
-    e = e || window.event;
-    e.preventDefault();
+            // Adjust the line position
+            line.style.left = `${width}px`; // Move the dividing line with the slider
+        };
 
-    // calculate new cursor position:
-    const { x, y } = getCoords(e);
-    pos1 = pos3 - x;
-    pos2 = pos4 - y;
-    pos3 = x;
-    pos4 = y;
+        slider.addEventListener('mousedown', (e) => {
+            isDragging = true;
+            document.body.style.cursor = 'ew-resize'; // Change cursor to indicate drag
+        });
 
-    let wrapperRight = el.offsetLeft - pos1;
+        window.addEventListener('mousemove', (e) => {
+            if (isDragging) {
+                updateSlider(e);
+            }
+        });
 
-    if (wrapperRight >= 0 && wrapperRight <= imageWrapper.offsetWidth) {
-      // set the element's new position:
-      el.style.left = `${el.offsetLeft - pos1}px`;
-      imageWrapper.querySelector('.before-image-wrapper').style.width = `${wrapperRight}px`;
-    }
-  }
+        window.addEventListener('mouseup', () => {
+            isDragging = false;
+            document.body.style.cursor = 'default'; // Reset cursor
+        });
 
-  function closeElementDrag() {
-    if (isTouch) {
-      document.ontouchend = null;
-      document.ontouchmove = null;
-    } else {
-      document.onmouseup = null;
-      document.onmousemove = null;
-    }
-  }
-}
+        // Initialize the position of the slider at the center
+        const initPosition = container.offsetWidth / 2;
+        slider.style.left = `${initPosition}px`;
+        afterImage.style.clipPath = `inset(0 0 0 ${initPosition}px)`;
+        line.style.left = `${initPosition}px`;
+    });
+</script>
 
-.before-after-wrapper {
-  outline: 4px solid green;
-  position: relative;
-  aspect-ratio: 3/2;
-}
-
-.before-after-wrapper::before {
-  background-color: hsla(172, 61%, 82%, 75%);
-  border-radius: 40px;
-  top: 10px;
-  color: green;
-  content: 'before';
-  left: 10px;
-  opacity: 0;
-  padding: 5px 10px;
-  position: absolute;
-  transition: opacity 200ms ease-in-out;
-  z-index: 15;
-}
-
-:global(.before-after-wrapper.show-before::before) {
-  opacity: 1;
-}
-
-.before-after-wrapper::after {
-  background-color: hsla(172, 61%, 82%, 75%);
-  border-radius: 40px;
-  top: 10px;
-  color: green;
-  opacity: 0;
-  padding: 5px 10px;
-  position: absolute;
-  right: 10px;
-  transition: opacity 200ms ease-in-out;
-  z-index: 15;
-  content: 'after';
-}
-
-:global(.before-after-wrapper.show-after::after) {
-  opacity: 1;
-}
-
-.before-image-wrapper {
-  bottom: 0;
-  left: 0;
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  z-index: 10;
-}
-
-.before-image {
-  background-size: cover;
-  height: 100%;
-  width: 100%;
-}
-
-.after-image {
-  background-size: cover;
-  inset: 0;
-  position: absolute;
-}
-
-.handle {
-  align-items: center;
-  background: green;
-  bottom: 0;
-  cursor: col-resize;
-  display: flex;
-  justify-content: center;
-  left: 50%;
-  position: absolute;
-  top: 0;
-  width: 4px;
-  z-index: 20;
-}
-
-.handle::before {
-  content: '';
-  position: absolute;
-  inset: 0 -20px;
-}
-
-.handle::after {
-  align-items: center;
-  background: darkgreen;
-  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" viewBox="0 0 512 512"><path fill="hsl(172, 61%, 82%)" d="M505.7 265.7c3-3 3.1-7.9 .2-11.1l-104-112c-3-3.2-8.1-3.4-11.3-.4s-3.4 8.1-.4 11.3L481.7 252 23.3 252l90.3-90.3c3.1-3.1 3.1-8.2 0-11.3s-8.2-3.1-11.3 0l-104 104c-3.1 3.1-3.1 8.2 0 11.3l104 104c3.1 3.1 8.2 3.1 11.3 0s3.1-8.2 0-11.3L23.3 268l457.4 0-90.3 90.3c-3.1 3.1-3.1 8.2 0 11.3s8.2 3.1 11.3 0l104-104z"/></svg>');
-  background-position: center;
-  background-repeat: no-repeat;
-  border-radius: 50%;
-  color: green;
-  content: '';
-  display: flex;
-  font-size: 16px;
-  font-weight: bold;
-  justify-content: center;
-  max-height: 40px;
-  max-width: 40px;
-  min-height: 40px;
-  min-width: 40px;
-}
+</body>
+</html>
