--- a/index.html
+++ b/index.html
@@ -5,102 +5,107 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Retouching Portfolio</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
+.before-after-wrapper {
+  outline: 4px solid green;
+  position: relative;
+  aspect-ratio: 3/2;
+}
 
-        header {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 20px 0;
-        }
+.before-after-wrapper::before {
+  background-color: hsla(172, 61%, 82%, 75%);
+  border-radius: 40px;
+  top: 10px;
+  color: green;
+  content: 'before';
+  left: 10px;
+  opacity: 0;
+  padding: 5px 10px;
+  position: absolute;
+  transition: opacity 200ms ease-in-out;
+  z-index: 15;
+}
 
-        header h1 {
-            margin: 0;
-        }
+:global(.before-after-wrapper.show-before::before) {
+  opacity: 1;
+}
 
-        .container {
-            max-width: 900px;
-            margin: 0 auto;
-            padding: 20px;
-        }
+.before-after-wrapper::after {
+  background-color: hsla(172, 61%, 82%, 75%);
+  border-radius: 40px;
+  top: 10px;
+  color: green;
+  opacity: 0;
+  padding: 5px 10px;
+  position: absolute;
+  right: 10px;
+  transition: opacity 200ms ease-in-out;
+  z-index: 15;
+  content: 'after';
+}
 
-        .gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 20px;
-        }
+:global(.before-after-wrapper.show-after::after) {
+  opacity: 1;
+}
 
-        .portfolio-item {
-            position: relative;
-            overflow: hidden;
-            border-radius: 10px;
-        }
+.before-image-wrapper {
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  z-index: 10;
+}
 
-        .slider-container {
-            position: relative;
-            width: 100%;
-            height: 400px; /* Adjust the height as needed */
-            overflow: hidden;
-        }
+.before-image {
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+}
 
-        .slider-container img {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
+.after-image {
+  background-size: cover;
+  inset: 0;
+  position: absolute;
+}
 
-        /* The Slider Line */
-        .slider-line {
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 50%;
-            width: 1px; /* Thin line */
-            background-color: #fff;
-            z-index: 10;
-        }
+.handle {
+  align-items: center;
+  background: green;
+  bottom: 0;
+  cursor: col-resize;
+  display: flex;
+  justify-content: center;
+  left: 50%;
+  position: absolute;
+  top: 0;
+  width: 4px;
+  z-index: 20;
+}
 
-        /* The Slider - Circle with arrows */
-        .slider {
-            position: absolute;
-            top: 50%; /* Vertically center the slider */
-            left: 50%; /* Initially position the slider at the center horizontally */
-            z-index: 20;
-            width: 40px; /* Circle width */
-            height: 40px; /* Circle height */
-            background: white;
-            cursor: ew-resize;
-            border-radius: 50%; /* Circle shape */
-            border: 2px solid #333; /* Circle border */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            transform: translateY(-50%); /* Vertically center the circle */
-        }
+.handle::before {
+  content: '';
+  position: absolute;
+  inset: 0 -20px;
+}
 
-        .slider .arrow {
-            font-size: 18px;
-            color: black;
-            background-color: transparent;
-        }
-
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
+.handle::after {
+  align-items: center;
+  background: darkgreen;
+  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" viewBox="0 0 512 512"><path fill="hsl(172, 61%, 82%)" d="M505.7 265.7c3-3 3.1-7.9 .2-11.1l-104-112c-3-3.2-8.1-3.4-11.3-.4s-3.4 8.1-.4 11.3L481.7 252 23.3 252l90.3-90.3c3.1-3.1 3.1-8.2 0-11.3s-8.2-3.1-11.3 0l-104 104c-3.1 3.1-3.1 8.2 0 11.3l104 104c3.1 3.1 8.2 3.1 11.3 0s3.1-8.2 0-11.3L23.3 268l457.4 0-90.3 90.3c-3.1 3.1-3.1 8.2 0 11.3s8.2 3.1 11.3 0l104-104z"/></svg>');
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  color: green;
+  content: '';
+  display: flex;
+  font-size: 16px;
+  font-weight: bold;
+  justify-content: center;
+  max-height: 40px;
+  max-width: 40px;
+  min-height: 40px;
+  min-width: 40px;
+}
     </style>
 </head>
 <body>
@@ -129,53 +134,98 @@
 </footer>
 
 <script>
-    const sliders = document.querySelectorAll('.slider');
-    const containers = document.querySelectorAll('.slider-container');
-    const lines = document.querySelectorAll('.slider-line');
+// get the div containing both the before and after images
+const imageWrapper = document.querySelector(`.before-after-wrapper`);
+// check if the user is using a touch device
+const isTouch = window.matchMedia('(pointer: coarse)').matches;
 
-    sliders.forEach((slider, index) => {
-        const container = containers[index];
-        const beforeImage = container.querySelector('.before');
-        const afterImage = container.querySelector('.after');
-        const line = lines[index];
-        let isDragging = false;
+// initialize the dragElement function below
+dragElement(imageWrapper.querySelector('.handle'));
 
-        // Function to update the position of the slider and adjust the "after" image and line
-        const updateSlider = (e) => {
-            const rect = container.getBoundingClientRect();
-            const offsetX = e.clientX - rect.left;
-            const width = Math.min(Math.max(offsetX, 0), rect.width); // Constrain within container width
-            slider.style.left = `${width}px`;
+// get the current coordinates of the .handle
+function getCoords(e) {
+  let x, y;
 
-            // Adjust the clip-path of the "after" image
-            afterImage.style.clipPath = `inset(0 0 0 ${width}px)`; // Clip "after" image to reveal it
+  // get the current x and y of the users input (dragging .handle)
+  // check if the device is a touch device
+  if (isTouch) {
+    // touchscreen: if the devices is a touch device, the x and y will be in the touches[0] object
+    x = e.touches[0].clientX;
+    y = e.touches[0].clientY;
+  } else {
+    // 
+    // desktop: if the device is not a touch device we can get it right from the event (e) object
+    x = e.clientX;
+    y = e.clientY;
+  }
 
-            // Adjust the line position
-            line.style.left = `${width}px`; // Move the dividing line with the slider
-        };
+  return { x, y };
+}
 
-        slider.addEventListener('mousedown', (e) => {
-            isDragging = true;
-            document.body.style.cursor = 'ew-resize'; // Change cursor to indicate drag
-        });
+// listens for the user touch/mouse input on the .handle element and drags the slider
+function dragElement(el) {
+  let pos1 = 0,
+      pos2 = 0,
+      pos3 = 0,
+      pos4 = 0;
 
-        window.addEventListener('mousemove', (e) => {
-            if (isDragging) {
-                updateSlider(e);
-            }
-        });
+  // initialize the slider being dragged when the .handle is pressed
+  if (isTouch) {
+    el.ontouchstart = dragInit;
+  } else {
+    el.onmousedown = dragInit;
+  }
 
-        window.addEventListener('mouseup', () => {
-            isDragging = false;
-            document.body.style.cursor = 'default'; // Reset cursor
-        });
+  // call elementDrag/closeElementDrag when the users interacts with .handle
+  function dragInit(e) {
+    e = e || window.event;
+    e.preventDefault();
 
-        // Initialize the position of the slider at the center
-        const initPosition = container.offsetWidth / 2;
-        slider.style.left = `${initPosition}px`;
-        afterImage.style.clipPath = `inset(0 0 0 ${initPosition}px)`;
-        line.style.left = `${initPosition}px`;
-    });
+    // get the mouse cursor/touch position at startup
+    const { x, y } = getCoords(e);
+    pos3 = x;
+    pos4 = y;
+
+    if (isTouch) {
+      document.ontouchend = closeElementDrag; // stop moving
+      document.ontouchmove = elementDrag; // call function whenever the cursor moves
+    } else {
+      document.onmouseup = closeElementDrag; // stop moving
+      document.onmousemove = elementDrag; // call function whenever the cursor moves
+    }
+  }
+
+  // as the element is dragged update the .before-image-wrapper width
+  function elementDrag(e) {
+    e = e || window.event;
+    e.preventDefault();
+
+    // calculate new cursor position:
+    const { x, y } = getCoords(e);
+    pos1 = pos3 - x;
+    pos2 = pos4 - y;
+    pos3 = x;
+    pos4 = y;
+
+    let wrapperRight = el.offsetLeft - pos1;
+
+    if (wrapperRight >= 0 && wrapperRight <= imageWrapper.offsetWidth) {
+      // set the element's new position:
+      el.style.left = `${el.offsetLeft - pos1}px`;
+      imageWrapper.querySelector('.before-image-wrapper').style.width = `${wrapperRight}px`;
+    }
+  }
+
+  function closeElementDrag() {
+    if (isTouch) {
+      document.ontouchend = null;
+      document.ontouchmove = null;
+    } else {
+      document.onmouseup = null;
+      document.onmousemove = null;
+    }
+  }
+}
 </script>
 
 </body>
