--- a/index.html
+++ b/index.html
@@ -5,107 +5,107 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Retouching Portfolio</title>
     <style>
-    .before-after-wrapper {
-        outline: 4px solid green;
-        position: relative;
-        aspect-ratio: 3/2;
-    }
+.before-after-wrapper {
+  outline: 4px solid green;
+  position: relative;
+  aspect-ratio: 3/2;
+}
 
-    .before-after-wrapper::before {
-        background-color: hsla(172, 61%, 82%, 75%);
-        border-radius: 40px;
-        top: 10px;
-        color: green;
-        content: 'before';
-        left: 10px;
-        opacity: 0;
-        padding: 5px 10px;
-        position: absolute;
-        transition: opacity 200ms ease-in-out;
-        z-index: 15;
-    }
+.before-after-wrapper::before {
+  background-color: hsla(172, 61%, 82%, 75%);
+  border-radius: 40px;
+  top: 10px;
+  color: green;
+  content: 'before';
+  left: 10px;
+  opacity: 0;
+  padding: 5px 10px;
+  position: absolute;
+  transition: opacity 200ms ease-in-out;
+  z-index: 15;
+}
 
-    :global(.before-after-wrapper.show-before::before) {
-        opacity: 1;
-    }
+:global(.before-after-wrapper.show-before::before) {
+  opacity: 1;
+}
 
-    .before-after-wrapper::after {
-        background-color: hsla(172, 61%, 82%, 75%);
-        border-radius: 40px;
-        top: 10px;
-        color: green;
-        opacity: 0;
-        padding: 5px 10px;
-        position: absolute;
-        right: 10px;
-        transition: opacity 200ms ease-in-out;
-        z-index: 15;
-        content: 'after';
-    }
+.before-after-wrapper::after {
+  background-color: hsla(172, 61%, 82%, 75%);
+  border-radius: 40px;
+  top: 10px;
+  color: green;
+  opacity: 0;
+  padding: 5px 10px;
+  position: absolute;
+  right: 10px;
+  transition: opacity 200ms ease-in-out;
+  z-index: 15;
+  content: 'after';
+}
 
-    :global(.before-after-wrapper.show-after::after) {
-        opacity: 1;
-    }
+:global(.before-after-wrapper.show-after::after) {
+  opacity: 1;
+}
 
-    .before-image-wrapper {
-        bottom: 0;
-        left: 0;
-        overflow: hidden;
-        position: absolute;
-        top: 0;
-        z-index: 10;
-    }
+.before-image-wrapper {
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  z-index: 10;
+}
 
-    .before-image {
-        background-size: cover;
-        height: 100%;
-        width: 100%;
-    }
+.before-image {
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+}
 
-    .after-image {
-        background-size: cover;
-        inset: 0;
-        position: absolute;
-    }
+.after-image {
+  background-size: cover;
+  inset: 0;
+  position: absolute;
+}
 
-    .handle {
-        align-items: center;
-        background: green;
-        bottom: 0;
-        cursor: col-resize;
-        display: flex;
-        justify-content: center;
-        left: 50%;
-        position: absolute;
-        top: 0;
-        width: 4px;
-        z-index: 20;
-    }
+.handle {
+  align-items: center;
+  background: green;
+  bottom: 0;
+  cursor: col-resize;
+  display: flex;
+  justify-content: center;
+  left: 50%;
+  position: absolute;
+  top: 0;
+  width: 4px;
+  z-index: 20;
+}
 
-    .handle::before {
-        content: '';
-        position: absolute;
-        inset: 0 -20px;
-    }
+.handle::before {
+  content: '';
+  position: absolute;
+  inset: 0 -20px;
+}
 
-    .handle::after {
-        align-items: center;
-        background: darkgreen;
-        background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" viewBox="0 0 512 512"><path fill="hsl(172, 61%, 82%)" d="M505.7 265.7c3-3 3.1-7.9 .2-11.1l-104-112c-3-3.2-8.1-3.4-11.3-.4s-3.4 8.1-.4 11.3L481.7 252 23.3 252l90.3-90.3c3.1-3.1 3.1-8.2 0-11.3s-8.2-3.1-11.3 0l-104 104c-3.1 3.1-3.1 8.2 0 11.3l104 104c3.1 3.1 8.2 3.1 11.3 0s3.1-8.2 0-11.3L23.3 268l457.4 0-90.3 90.3c-3.1 3.1-3.1 8.2 0 11.3s8.2 3.1 11.3 0l104-104z"/></svg>');
-        background-position: center;
-        background-repeat: no-repeat;
-        border-radius: 50%;
-        color: green;
-        content: '';
-        display: flex;
-        font-size: 16px;
-        font-weight: bold;
-        justify-content: center;
-        max-height: 40px;
-        max-width: 40px;
-        min-height: 40px;
-        min-width: 40px;
-    }
+.handle::after {
+  align-items: center;
+  background: darkgreen;
+  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" viewBox="0 0 512 512"><path fill="hsl(172, 61%, 82%)" d="M505.7 265.7c3-3 3.1-7.9 .2-11.1l-104-112c-3-3.2-8.1-3.4-11.3-.4s-3.4 8.1-.4 11.3L481.7 252 23.3 252l90.3-90.3c3.1-3.1 3.1-8.2 0-11.3s-8.2-3.1-11.3 0l-104 104c-3.1 3.1-3.1 8.2 0 11.3l104 104c3.1 3.1 8.2 3.1 11.3 0s3.1-8.2 0-11.3L23.3 268l457.4 0-90.3 90.3c-3.1 3.1-3.1 8.2 0 11.3s8.2 3.1 11.3 0l104-104z"/></svg>');
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  color: green;
+  content: '';
+  display: flex;
+  font-size: 16px;
+  font-weight: bold;
+  justify-content: center;
+  max-height: 40px;
+  max-width: 40px;
+  min-height: 40px;
+  min-width: 40px;
+}
     </style>
 </head>
 <body>
@@ -119,7 +119,7 @@
   <!-- before image: width starts at 50% but will change depending on where the slider is -->
   <div class="before-image-wrapper" style="width: 50%;">
     <div class="before-image" style="background-image: url('images/retouching1_before.jpg');" alt="Before Image 1" class="before"></div>
-  </div>
+
   
   <!-- after image: takes up entire width -->
   <div class="after-image" style="background-image: url('images/retouching1_after.jpg');" alt="After Image 1" class="after"></div>
@@ -128,13 +128,14 @@
   <span class="handle draggable"></span>
 </div>
 
+  
 <footer>
     <p>Contact me at <a href="mailto:phoenixfusion2025@gmail.com" style="color: white;">phoenixfusion2025@gmail.com</a></p>
 </footer>
 
 <script>
 // get the div containing both the before and after images
-const imageWrapper = document.querySelector(`.before-after-wrapper`);
+const imageWrapper = document.querySelector(.before-after-wrapper);
 // check if the user is using a touch device
 const isTouch = window.matchMedia('(pointer: coarse)').matches;
 
@@ -210,8 +211,8 @@ function dragElement(el) {
 
     if (wrapperRight >= 0 && wrapperRight <= imageWrapper.offsetWidth) {
       // set the element's new position:
-      el.style.left = `${el.offsetLeft - pos1}px`;
-      imageWrapper.querySelector('.before-image-wrapper').style.width = `${wrapperRight}px`;
+      el.style.left = ${el.offsetLeft - pos1}px;
+      imageWrapper.querySelector('.before-image-wrapper').style.width = ${wrapperRight}px;
     }
   }
 
