--- a/index.html
+++ b/index.html
@@ -148,7 +148,12 @@ body {
   <!-- draggable slider with handle -->
   <span class="handle draggable"></span>
 </div>
-
+<section data-slice-type="before_and_after" data-slice-variation="default" class="overflow-hidden before-after-wrapper rounded-3xl svelte-18shrgw">
+    <div class="before-image-wrapper svelte-18shrgw" style="width: 483px;">
+        <div class="before-image svelte-18shrgw" style="background-image: url('images/retouching1_before.jpg');" alt="Before Image 1">      
+        </div></div> <div class="after-image svelte-18shrgw" style="background-image: url('images/retouching1_after.jpg');" alt="After Image 1"></div> 
+    <span class="handle draggable svelte-18shrgw" style="left: 483px;"></span>
+</section>
   
 <footer>
     <p>Contact me at <a href="mailto:phoenixfusion2025@gmail.com" style="color: white;">phoenixfusion2025@gmail.com</a></p>
