--- a/index.html
+++ b/index.html
@@ -132,11 +132,12 @@ main {
   </main>
 </body>
 <footer>
+    <p>Contact me at <a href="mailto:phoenixfusion2025@gmail.com" style="color: white;">phoenixfusion2025@gmail.com</a></p>
+</footer>
   <script>
     const container = document.querySelector('.container');
 document.querySelector('.slider').addEventListener('input', (e) => {
   container.style.setProperty('--position', `${e.target.value}%`);
 })
   </script>
-</footer>
 </html>
