--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
         position: absolute;
         inset: 0;
         width: var(--position);
+        transition: width 0.2s ease;
+      }
+
+      .image-after {
+        position: absolute;
+        inset: 0;
+        width: 100%;
       }
 
       .slider {
@@ -110,7 +117,7 @@
       }
 
       footer a {
-        color: #ff8c00;
+        color: white;
         text-decoration: none;
       }
 
@@ -167,7 +174,7 @@
   </main>
 
   <footer>
-    <p>Contact me at <a href="mailto:phoenixfusion2025@gmail.com" style="color: black;">phoenixfusion2025@gmail.com</a></p>
+    <p>Contact me at <a href="mailto:phoenixfusion2025@gmail.com" style="color: white;">phoenixfusion2025@gmail.com</a></p>
   </footer>
 
   <script>
