--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
       <div class="image-container">
         <img 
           class="image-before slider-image"
-          src="./images/retouching1_before.jpg"
+          src="/images/retouching1_before.jpg"
           alt="Before image"
         />
         <img  
           class="image-after slider-image"
-          src="./images/retouching1_after.jpg"
+          src="/images/retouching1_after.jpg"
           alt="After image"
         />
       </div>
