--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         max-width: 800px;
         aspect-ratio: 16/9;
         background-color: #000;
+        box-sizing: border-box;
       }
 
       .image-container {
