--- a/index.html
+++ b/index.html
@@ -45,10 +45,7 @@ main {
   position: relative;
   overflow: hidden;
   border-radius: 1rem;
-  width: 100%;
-  max-width: 800px;
-  aspect-ratio: 16/9;
-  background-color: #000;  --position: 50%;
+  --position: 50%;
 }
 
 .slider-image {
@@ -109,22 +106,10 @@ main {
 header {
     text-align: center;
     margin-bottom: 2rem;
-      }
-
-footer {
-    text-align: center;
-    padding: 1rem;
-    background-color: #222;
-    color: white;
 }
-
-footer a {
-    color: #ff8c00;
-    text-decoration: none;
-}
-    
-</style>
+    </style>
 </head>
+
 <body>
   <main>
     <div class="container">
