--- a/index.html
+++ b/index.html
@@ -45,14 +45,17 @@ main {
   position: relative;
   overflow: hidden;
   border-radius: 1rem;
-  --position: 50%;
+  width: 100%;
+  max-width: 800px;
+  aspect-ratio: 16/9;
+  background-color: #000;
 }
 
 .slider-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: left;
+  object-position: center;
 }
 
 .image-before {
@@ -107,6 +110,13 @@ header {
     text-align: center;
     margin-bottom: 2rem;
 }
+
+  footer {
+    text-align: center;
+    padding: 1rem;
+    background-color: #222;
+    color: white;
+  }
     </style>
 </head>
 
