--- a/index.html
+++ b/index.html
@@ -156,12 +156,12 @@
       <div class="image-container">
         <img 
           class="image-before slider-image"
-          src="/images/retouching1_before.jpg"
+          src="https://phoenixphotography.github.io/Before-After/images/retouching1_before.jpg"
           alt="Before image"
         />
         <img  
           class="image-after slider-image"
-          src="/images/retouching1_after.jpg"
+          src="https://phoenixphotography.github.io/Before-After/images/retouching1_after.jpg"
           alt="After image"
         />
       </div>
