--- a/index.html
+++ b/index.html
@@ -108,11 +108,6 @@
         box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
       }
 
-      header {
-        text-align: center;
-        margin-bottom: 2rem;
-      }
-
       footer {
         text-align: center;
         padding: 1rem;
@@ -154,6 +149,7 @@
   <main>
     <div class="container">
       <div class="image-container">
+        <!-- Use full URLs for the images -->
         <img 
           class="image-before slider-image"
           src="https://phoenixphotography.github.io/Before-After/images/retouching1_before.jpg"
@@ -184,7 +180,6 @@
   <script>
     const container = document.querySelector('.container');
     document.querySelector('.slider').addEventListener('input', (e) => {
-      // Ensure the width of the "before" image is updated based on the slider position
       container.style.setProperty('--position', `${e.target.value}%`);
     })
   </script>
