--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         width: 100%;
         max-width: 800px;
         aspect-ratio: 2/3; /* Set the 2:3 aspect ratio */
-        background-color: #000;
         height: 600px; /* Explicit height for the container */
+        background-color: #000;
         box-sizing: border-box;
       }
 
@@ -150,7 +150,7 @@
   <main>
     <div class="container">
       <div class="image-container">
-        <!-- Use the absolute URL for the images -->
+        <!-- Full image URLs for the images -->
         <img 
           class="image-before slider-image"
           src="https://phoenixphotography.github.io/Before-After/images/retouching1_before.jpg"
